--- a/characterCreator/css/cc.css
+++ b/characterCreator/css/cc.css
@@ -6,7 +6,9 @@ html,body{
   min-height: 100%;
   max-height: 100%;
 }
-
+.full{
+  width: 100% !important;
+}
 .checkbookList{
   min-width: 450px;
   padding: 0;
