--- a/characterCreator/css/cc.css
+++ b/characterCreator/css/cc.css
@@ -6,6 +6,9 @@ html,body{
   min-height: 100%;
   max-height: 100%;
 }
+.tableAttributes{
+  width: 100%;
+}
 .full{
   width: 100% !important;
 }
@@ -69,6 +72,17 @@ input[type='checkbox']{
   position: relative;
   right: 50%;
   top: 90%;
+}
+.rolledModTable{
+  border-radius: 50%;
+  margin: 0 auto;
+  padding: 8px 12px;
+  background: #fff;
+  border: 2px solid #666;
+  color: #666;
+  text-align: center;
+  font: 14px Arial, sans-serif;
+  font-weight: bold;
 }
 .rollMatrixTable{
   width: 50%;
