--- a/characterCreator/css/cc.css
+++ b/characterCreator/css/cc.css
@@ -23,10 +23,7 @@ html,body{
 .largerCheckboxPadding {
   padding: 0;
 }
-input:read-only{
-  background-color: #fff !important;
-  cursor: default;
-}
+
 input[readOnly]{
   background-color: #fff !important;
   cursor: default;
@@ -94,7 +91,57 @@ input[type='checkbox']{
   max-height: 450px;
   max-width: 600px;
   padding: 0;
+
+  /* transform: translate3d(0px, 0px, 0px) !important; */
+
 }
+
+
+
+/* Dropdown Button */
+
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  border: #cecece 1px solid;
+  text-align: left;
+  min-width: 160px;
+  /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
+  z-index: 1000;
+}
+.open{
+  display: block;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #495057;
+  padding: .25rem 1.5rem;
+  clear: both;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content a:nth-of-type(odd){
+  background-color: rgba(0,0,0,.05);
+}
+.striped:nth-of-type(odd){
+  background-color: rgba(0,0,0,.05) !important;
+}
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+/* Show the dropdown menu on hover */
+/* .dropdown:hover .dropdown-content {display: block;} */
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
+
 .rollMatrixTable{
   width: 50%;
   margin: 0 auto;
@@ -107,7 +154,7 @@ input[type='checkbox']{
     margin: 0 auto;
 }
 .table-bordered td, .table-bordered th {
-    border: 1px solid #ffffff;
+    border: 1px solid #fff;
 }
 
 li{
@@ -205,7 +252,6 @@ h1{
   overflow: hidden;
   border-left: 1px solid #dddddd;
   border-right: 1px solid #dddddd;
-  border-top: 1px solid #dddddd;
 }
 
 .table-header-rotated th.rotate-45 span {
