--- a/characterCreator/css/cc.css
+++ b/characterCreator/css/cc.css
@@ -182,6 +182,7 @@ h1{
   border-radius: 5px;
   margin-top: 1rem;
   padding: 1rem;
+  width: 100%;
 }
 .table-header-rotated th.row-header{
   width: auto;
